# typepanel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/sync/: route.ts
app/room/[id]/: page.tsx
kubernetes/: README.md  typepanel-deployment.yaml  typepanel-namespace.yaml  typepanel-service.yaml
server/: Cargo.toml  index.js
server/src/: limits.rs  main.rs  relay.rs
